Fix wrap extend

--- a/sass/component-placeholders/_wrap.scss
+++ b/sass/component-placeholders/_wrap.scss
@@ -9,3 +9,14 @@
 	position: relative;
 	width: calc(100% - #{_($layout-padding) * 2});
 }
+
+@each $name, $width in $wrap-width {
+
+	%Wrap--#{camelize($name)} {
+		@include responsive-property('max-width', $width);
+		padding-left: _(map-get($wrap-padding, $name));
+		padding-right: _(map-get($wrap-padding, $name));
+		width: calc(100% - #{_(map-get($wrap-padding, $name)) * 2});
+	}
+
+}
